add validation and token to registration; abstract css to style.css

--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,37 @@ adapted from https://github.com/ThisIsDallas/Simple-Grid
 	clear: both;
 }
 
+body{background: #e9e6e8;color: #061212; 
+				font-size: 1em;}
+			h1, h2, h3, .php-output{font-family: Roboto, sans-serif;font-weight: 300;}
+			h1{font-size: 1.27em; line-height: 1em;
+				margin-bottom: 1em;}
+			h2{font-size: 1.125em; line-height: 1.2em;
+			margin-top: 1em; margin-bottom: 1em;}
+			h3{font-size: 1em;}
+			
+			h2,h3{font-family: "Gill Sans MT", sans-serif;}
+			.header-container{border-radius: 3em 0; background: #cbc8c9;}
+			.header-container>header>*{display: inline-block;}
+			.title{color: #121212; text-shadow: #061212 0.6px -0.3px 1.6px; letter-spacing: 0.1em; padding: 0 1em;font-size: 1.42em;  line-height: 0.62em;
+  margin-top: 1.9em;
+  margin-bottom: 0.9em;}
+            .subtitle{font-variant: small-caps;!important}
+            .upper{text-transform: uppercase;}
+			.main-container{margin: 0 0.1em 0 0.37em;}
+			.php-output{background: none repeat scroll 0 0 #1f1e1c;
+						border-radius: 0.3em;
+						color: #ebeaee;
+						display: inline-block;
+						font-size: 0.9em;
+						font-weight: normal;
+						margin-top: 0.2em;
+						padding: 0.18em 0.62em;}
+			.dright {float:right; text-align:right;}
+			@media (min-width: 45em){
+				.main-container{margin-left: 1.62em;}
+			}	
+
 
 
 
