--- a/css/main.css
+++ b/css/main.css
@@ -172,9 +172,17 @@ a.title:hover{color: #fdfdfd; text-shadow: #a69299 0.6px -0.3px 2px}
 						font-weight: normal;
 						margin-top: 0.2em;
 						padding: 0.18em 0.62em;}
+						
+.flash {
+	position: fixed;
+	top: 5px;
+	left: 62%;
+}
 .dright {float:right; text-align:right;}
 
-
+code{
+	background: #f3f3fc; margin-top: 0.2em;
+	padding: 0.18em 0;}
 			
 			
 @media (min-width: 45em){
