improve responsive style

--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,7 @@ a.title:hover{color: #fdfdfd; text-shadow: #a69299 0.6px -0.3px 2px}
 	top: 5px;
 	left: 62%;
 }
-.dright {float:right; text-align:right;font-size: 0.88em;margin-top: 4.4em}
+.dright {float:right; text-align:right;margin-top: 4.4em}
 
 code{
 	background: #f3f3fc; margin-top: 0.2em;
