--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@ textarea {
 
 body {
     font-size: 1em;
-    line-height: 1.4;
 }
 
 /*
@@ -60,6 +59,7 @@ hr {
 audio,
 canvas,
 img,
+svg,
 video {
     vertical-align: middle;
 }
@@ -342,8 +342,6 @@ code{
     background-color: transparent;
     border: 0;
     overflow: hidden;
-    /* IE 6/7 fallback */
-    *text-indent: -9999px;
 }
 
 .ir:before {
@@ -422,14 +420,6 @@ code{
     clear: both;
 }
 
-/*
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-
-.clearfix {
-    *zoom: 1;
-}
 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
