--- a/css/main.css
+++ b/css/main.css
@@ -138,9 +138,10 @@ adapted from https://github.com/ThisIsDallas/Simple-Grid
 }
 
 body{
-	background: #e9e6e8;
-	color: #061212;font-size: 1em;}
+	background: rgb(236,232,204);
+	color: #060606;font-size: 1em;}
 	
+a{color:rgb(138, 26, 4)}
 .wrapper{padding:1em}
 
 h1, h2, h3, .php-output{
@@ -157,7 +158,7 @@ h2,h3{font-family: "Gill Sans MT", sans-serif;}
 header.wrapper>*{display: inline-block;}
 
 
-.header-container{background: #CBC8C9;
+.header-container{background: rgb(160,185,153);
     border-radius: 2em 0;
     position: relative;
     }
